2001-02-02  Ulrich Drepper  <drepper@redhat.com>

	* posix/regex.c: Implement multibyte character handling.
	Patch by Isamu Hasegawa <isamu@yamato.ibm.co.jp>.

	* string/tst-svc.input: Add two more test cases.
	* string/tst-svc.expect: Modify to reflect new test cases.

2001-02-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_local, gaih_inet): Replace all
	tp->name tests with tp->name[0] tests.

2001-01-29  Ben Collins  <bcollins@debian.org>

	* nis/nss_nisplus/nisplus-ethers.c (_nss_nisplus_gethostton_r):
	Fix check for name == NULL.

2001-02-01  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile: Add rules to build and run initfirst test.
	* elf/initfirst.c: New file.
	* elf/firstobj.c: New file.

	* Makerules (build-shlib): Add $(extra-B-$(@F:lib%.so=%).so).
	* configure.in: Test for -z initfirst linker option.
	* config.make.in: Add have-z-initfirst.
	* elf/dl-init.c (_dl_init): Split out actual initialization code in
	new function call_init.  If _dl_initfirst is non-NULL initialize first.
	* elf/dl-load.c (_dl_map_from_fd): If DF_1_INITFIRST flag is set
	remember object in _dl_initfirst.
	* elf/soinit.c: Remove special support for calling
	__pthread_initialize_minimal.

	* conform/conformtest.pl: Add missing $prepend in type test.

2001-01-31  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h (SHT_CHECKSUM): New definition.

	* posix/fnmatch_loop.c: Remove incorrect reverse condition in
	[. .] matching.  Patch by Isamu Hasegawa <isamu@yamato.ibm.com>.
	* posix/tst-fnmatch.input: Add tests for [. .] in locales.

2001-01-31  Mark Kettenis  <kettenis@gnu.org>

	* misc/sys/select.h: Include <bits/time.h> instead of <sys/time.h>
	to get definition of `struct timeval'.

2001-01-31  Ulrich Drepper  <drepper@redhat.com>

	* posix/tst-fnmatch.input: Add test cases for de_DE.UTF-8 locale.
	* posix/fnmatch_loop.c: Fix handling of [= =] for multibyte charsets.

2001-01-30  Ulrich Drepper  <drepper@redhat.com>
