@@ -1,5 +1,9 @@
 2001-02-02  Ulrich Drepper  <drepper@redhat.com>
 
+	* hesiod/hesiod.c (hesiod_resolve): Also search HS records is
+	errno is ECONNREFUSED.
+
+	* posix/Makefile: Define MBS_SUPPORT for regex.c.
 	* posix/regex.c: Implement multibyte character handling.
 	Patch by Isamu Hasegawa <isamu@yamato.ibm.co.jp>.
 
